force-app-modified/main/default/objects/TasksSeaTime__c/fields/boat__c.field-meta.xml
<CustomField>
    <fullName>boat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>סירה</label>
    <referenceTo>Boats__c</referenceTo>
    <relationshipLabel>מטלות</relationshipLabel>
    <relationshipName>tasksKI3J</relationshipName>
    <type>Lookup</type>
</CustomField>