force-app-modified/main/default/objects/TasksSeaTime__c/fields/charter__c.field-meta.xml
<CustomField>
    <fullName>charter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>צ&apos;רטר</label>
    <referenceTo>charters__c</referenceTo>
    <relationshipLabel>מטלות</relationshipLabel>
    <relationshipName>tasksUe1e</relationshipName>
    <type>Lookup</type>
</CustomField>