force-app-modified/main/default/objects/TasksSeaTime__c/fields/cruise__c.field-meta.xml
<CustomField>
    <fullName>cruise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>הפלגה</label>
    <referenceTo>Cruise__c</referenceTo>
    <relationshipLabel>מטלות</relationshipLabel>
    <relationshipName>tasksEGwL</relationshipName>
    <type>Lookup</type>
</CustomField>