force-app-modified/main/default/objects/TasksSeaTime__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>תיאור</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>