force-app-modified/main/default/objects/TasksSeaTime__c/fields/email_instructor__c.field-meta.xml
<CustomField>
    <fullName>email_instructor__c</fullName>
    <label>email instructor</label>
    <type>Email</type>
</CustomField>