force-app-modified/main/default/objects/TasksSeaTime__c/fields/OLDAssignedTo__c.field-meta.xml
<CustomField>
    <fullName>OLDAssignedTo__c</fullName>
    <label>גורם מטפל ישן</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>יונתן</fullName>
                <default>true</default>
                <label>יונתן</label>
            </value>
            <value>
                <fullName>רפי</fullName>
            </value>
            <value>
                <fullName>תום</fullName>
            </value>
            <value>
                <fullName>בן</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>