force-app-modified/main/default/objects/TasksSeaTime__c/fields/TaskType__c.field-meta.xml
<CustomField>
    <fullName>TaskType__c</fullName>
    <label>סוג משימה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>טיפול מהיר</fullName>
                <default>true</default>
                <label>טיפול מהיר</label>
            </value>
            <value>
                <fullName>מתמשכת</fullName>
            </value>
            <value>
                <fullName>תהליך ארוך</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>