force-app-modified/main/default/objects/TasksSeaTime__c/recordTypes/abraod.recordType-meta.xml
<RecordType>
    <fullName>abraod</fullName>
    <active>true</active>
    <label>הפלגות בחו&quot;ל</label>
</RecordType>