force-app-modified/main/default/objects/TasksSeaTime__c/recordTypes/club.recordType-meta.xml
<RecordType>
    <fullName>club</fullName>
    <active>true</active>
    <label>הפלגות בארץ</label>
</RecordType>