force-app-modified/main/default/objects/TasksSeaTime__c/recordTypes/courses.recordType-meta.xml
<RecordType>
    <fullName>courses</fullName>
    <active>true</active>
    <label>קורסים</label>
</RecordType>