force-app-modified/main/default/objects/TasksSeaTime__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <label>כללי</label>
</RecordType>