force-app-modified/main/default/objects/TasksSeaTime__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AssignedTo__c</columns>
    <columns>Urgency__c</columns>
    <columns>NextFollowDate__c</columns>
    <columns>DateToComplete__c</columns>
    <columns>Description__c</columns>
    <columns>status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>status__c</field>
        <operation>notEqual</operation>
        <value>הסתיים</value>
    </filters>
    <label>All</label>
</ListView>