force-app-modified/main/default/objects/TasksSeaTime__c/listViews/Tom.listView-meta.xml
<ListView>
    <fullName>Tom</fullName>
    <columns>NAME</columns>
    <columns>Urgency__c</columns>
    <columns>NextFollowDate__c</columns>
    <columns>DateToComplete__c</columns>
    <columns>Description__c</columns>
    <columns>status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>status__c</field>
        <operation>notEqual</operation>
        <value>הסתיים</value>
    </filters>
    <filters>
        <field>AssignedTo__c</field>
        <operation>equals</operation>
        <value>תום זולברג</value>
    </filters>
    <filters>
        <field>NextFollowDate__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>תום</label>
</ListView>