force-app-modified/main/default/objects/TasksSeaTime__c/listViews/YonatanGeneral.listView-meta.xml
<ListView>
    <fullName>YonatanGeneral</fullName>
    <columns>NAME</columns>
    <columns>Urgency__c</columns>
    <columns>NextFollowDate__c</columns>
    <columns>DateToComplete__c</columns>
    <columns>Description__c</columns>
    <columns>status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>status__c</field>
        <operation>notEqual</operation>
        <value>הסתיים</value>
    </filters>
    <filters>
        <field>AssignedTo__c</field>
        <operation>equals</operation>
        <value>יונתן ברסלר</value>
    </filters>
    <label>יונתן כללי</label>
</ListView>